yacc/parser.automaton
State 0:
parse' -> . parse [ # ]
-- On VAR shift to state 1
-- On STUCK shift to state 2
-- On SPW shift to state 3
-- On SKIP shift to state 5
-- On RET shift to state 6
-- On REPEAT shift to state 36
-- On LOC shift to state 39
-- On LABEL shift to state 44
-- On INT shift to state 11
-- On IF shift to state 45
-- On BOPEN shift to state 12
-- On stmt shift to state 61
-- On parse shift to state 63
-- On expr shift to state 51

State 1:
expr -> VAR . [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On TSEP reduce production expr -> VAR 
-- On TIMES reduce production expr -> VAR 
-- On THEN reduce production expr -> VAR 
-- On TCLOSE reduce production expr -> VAR 
-- On SEMICOLON reduce production expr -> VAR 
-- On PLUS reduce production expr -> VAR 
-- On NEQ reduce production expr -> VAR 
-- On MINUS reduce production expr -> VAR 
-- On LT reduce production expr -> VAR 
-- On LE reduce production expr -> VAR 
-- On GT reduce production expr -> VAR 
-- On GE reduce production expr -> VAR 
-- On FI reduce production expr -> VAR 
-- On EQ reduce production expr -> VAR 
-- On EOF reduce production expr -> VAR 
-- On END reduce production expr -> VAR 
-- On ELSE reduce production expr -> VAR 
-- On COMMA reduce production expr -> VAR 
-- On BCLOSE reduce production expr -> VAR 
-- On ASSIGN reduce production expr -> VAR 

State 2:
stmt -> STUCK . [ TSEP TCLOSE SEMICOLON FI EOF ELSE ]
-- On TSEP reduce production stmt -> STUCK 
-- On TCLOSE reduce production stmt -> STUCK 
-- On SEMICOLON reduce production stmt -> STUCK 
-- On FI reduce production stmt -> STUCK 
-- On EOF reduce production stmt -> STUCK 
-- On ELSE reduce production stmt -> STUCK 

State 3:
stmt -> SPW . TOPEN stmt TSEP stmt TCLOSE [ TSEP TCLOSE SEMICOLON FI EOF ELSE ]
-- On TOPEN shift to state 4

State 4:
stmt -> SPW TOPEN . stmt TSEP stmt TCLOSE [ TSEP TCLOSE SEMICOLON FI EOF ELSE ]
-- On VAR shift to state 1
-- On STUCK shift to state 2
-- On SPW shift to state 3
-- On SKIP shift to state 5
-- On RET shift to state 6
-- On REPEAT shift to state 36
-- On LOC shift to state 39
-- On LABEL shift to state 44
-- On INT shift to state 11
-- On IF shift to state 45
-- On BOPEN shift to state 12
-- On stmt shift to state 57
-- On expr shift to state 51

State 5:
stmt -> SKIP . [ TSEP TCLOSE SEMICOLON FI EOF ELSE ]
-- On TSEP reduce production stmt -> SKIP 
-- On TCLOSE reduce production stmt -> SKIP 
-- On SEMICOLON reduce production stmt -> SKIP 
-- On FI reduce production stmt -> SKIP 
-- On EOF reduce production stmt -> SKIP 
-- On ELSE reduce production stmt -> SKIP 

State 6:
stmt -> RET . expr [ TSEP TCLOSE SEMICOLON FI EOF ELSE ]
-- On VAR shift to state 1
-- On LOC shift to state 7
-- On LABEL shift to state 10
-- On INT shift to state 11
-- On BOPEN shift to state 12
-- On expr shift to state 35

State 7:
expr -> LOC . UNDERSCORE MO [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On UNDERSCORE shift to state 8

State 8:
expr -> LOC UNDERSCORE . MO [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On MO shift to state 9

State 9:
expr -> LOC UNDERSCORE MO . [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On TSEP reduce production expr -> LOC UNDERSCORE MO 
-- On TIMES reduce production expr -> LOC UNDERSCORE MO 
-- On THEN reduce production expr -> LOC UNDERSCORE MO 
-- On TCLOSE reduce production expr -> LOC UNDERSCORE MO 
-- On SEMICOLON reduce production expr -> LOC UNDERSCORE MO 
-- On PLUS reduce production expr -> LOC UNDERSCORE MO 
-- On NEQ reduce production expr -> LOC UNDERSCORE MO 
-- On MINUS reduce production expr -> LOC UNDERSCORE MO 
-- On LT reduce production expr -> LOC UNDERSCORE MO 
-- On LE reduce production expr -> LOC UNDERSCORE MO 
-- On GT reduce production expr -> LOC UNDERSCORE MO 
-- On GE reduce production expr -> LOC UNDERSCORE MO 
-- On FI reduce production expr -> LOC UNDERSCORE MO 
-- On EQ reduce production expr -> LOC UNDERSCORE MO 
-- On EOF reduce production expr -> LOC UNDERSCORE MO 
-- On END reduce production expr -> LOC UNDERSCORE MO 
-- On ELSE reduce production expr -> LOC UNDERSCORE MO 
-- On COMMA reduce production expr -> LOC UNDERSCORE MO 
-- On BCLOSE reduce production expr -> LOC UNDERSCORE MO 
-- On ASSIGN reduce production expr -> LOC UNDERSCORE MO 

State 10:
expr -> LABEL . [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On TSEP reduce production expr -> LABEL 
-- On TIMES reduce production expr -> LABEL 
-- On THEN reduce production expr -> LABEL 
-- On TCLOSE reduce production expr -> LABEL 
-- On SEMICOLON reduce production expr -> LABEL 
-- On PLUS reduce production expr -> LABEL 
-- On NEQ reduce production expr -> LABEL 
-- On MINUS reduce production expr -> LABEL 
-- On LT reduce production expr -> LABEL 
-- On LE reduce production expr -> LABEL 
-- On GT reduce production expr -> LABEL 
-- On GE reduce production expr -> LABEL 
-- On FI reduce production expr -> LABEL 
-- On EQ reduce production expr -> LABEL 
-- On EOF reduce production expr -> LABEL 
-- On END reduce production expr -> LABEL 
-- On ELSE reduce production expr -> LABEL 
-- On COMMA reduce production expr -> LABEL 
-- On BCLOSE reduce production expr -> LABEL 
-- On ASSIGN reduce production expr -> LABEL 

State 11:
expr -> INT . [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On TSEP reduce production expr -> INT 
-- On TIMES reduce production expr -> INT 
-- On THEN reduce production expr -> INT 
-- On TCLOSE reduce production expr -> INT 
-- On SEMICOLON reduce production expr -> INT 
-- On PLUS reduce production expr -> INT 
-- On NEQ reduce production expr -> INT 
-- On MINUS reduce production expr -> INT 
-- On LT reduce production expr -> INT 
-- On LE reduce production expr -> INT 
-- On GT reduce production expr -> INT 
-- On GE reduce production expr -> INT 
-- On FI reduce production expr -> INT 
-- On EQ reduce production expr -> INT 
-- On EOF reduce production expr -> INT 
-- On END reduce production expr -> INT 
-- On ELSE reduce production expr -> INT 
-- On COMMA reduce production expr -> INT 
-- On BCLOSE reduce production expr -> INT 
-- On ASSIGN reduce production expr -> INT 

State 12:
expr -> BOPEN . expr BCLOSE [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On VAR shift to state 1
-- On LOC shift to state 7
-- On LABEL shift to state 10
-- On INT shift to state 11
-- On BOPEN shift to state 12
-- On expr shift to state 13

State 13:
expr -> BOPEN expr . BCLOSE [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . PLUS expr [ TIMES PLUS NEQ MINUS LT LE GT GE EQ COMMA BCLOSE ]
expr -> expr . MINUS expr [ TIMES PLUS NEQ MINUS LT LE GT GE EQ COMMA BCLOSE ]
expr -> expr . TIMES expr [ TIMES PLUS NEQ MINUS LT LE GT GE EQ COMMA BCLOSE ]
expr -> expr . EQ expr [ TIMES PLUS NEQ MINUS LT LE GT GE EQ COMMA BCLOSE ]
expr -> expr . NEQ expr [ TIMES PLUS NEQ MINUS LT LE GT GE EQ COMMA BCLOSE ]
expr -> expr . LT expr [ TIMES PLUS NEQ MINUS LT LE GT GE EQ COMMA BCLOSE ]
expr -> expr . LE expr [ TIMES PLUS NEQ MINUS LT LE GT GE EQ COMMA BCLOSE ]
expr -> expr . GT expr [ TIMES PLUS NEQ MINUS LT LE GT GE EQ COMMA BCLOSE ]
expr -> expr . GE expr [ TIMES PLUS NEQ MINUS LT LE GT GE EQ COMMA BCLOSE ]
expr -> expr . COMMA expr [ TIMES PLUS NEQ MINUS LT LE GT GE EQ COMMA BCLOSE ]
-- On TIMES shift to state 14
-- On PLUS shift to state 18
-- On NEQ shift to state 16
-- On MINUS shift to state 22
-- On LT shift to state 20
-- On LE shift to state 24
-- On GT shift to state 26
-- On GE shift to state 28
-- On EQ shift to state 30
-- On COMMA shift to state 32
-- On BCLOSE shift to state 34

State 14:
expr -> expr TIMES . expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On VAR shift to state 1
-- On LOC shift to state 7
-- On LABEL shift to state 10
-- On INT shift to state 11
-- On BOPEN shift to state 12
-- On expr shift to state 15

State 15:
expr -> expr . PLUS expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . MINUS expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . TIMES expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr TIMES expr . [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . EQ expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . NEQ expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . LT expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . LE expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . GT expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . GE expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . COMMA expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On NEQ shift to state 16
-- On LT shift to state 20
-- On LE shift to state 24
-- On GT shift to state 26
-- On GE shift to state 28
-- On EQ shift to state 30
-- On COMMA shift to state 32
-- On TSEP reduce production expr -> expr TIMES expr 
-- On TIMES reduce production expr -> expr TIMES expr 
-- On THEN reduce production expr -> expr TIMES expr 
-- On TCLOSE reduce production expr -> expr TIMES expr 
-- On SEMICOLON reduce production expr -> expr TIMES expr 
-- On PLUS reduce production expr -> expr TIMES expr 
-- On NEQ reduce production expr -> expr TIMES expr 
-- On MINUS reduce production expr -> expr TIMES expr 
-- On LT reduce production expr -> expr TIMES expr 
-- On LE reduce production expr -> expr TIMES expr 
-- On GT reduce production expr -> expr TIMES expr 
-- On GE reduce production expr -> expr TIMES expr 
-- On FI reduce production expr -> expr TIMES expr 
-- On EQ reduce production expr -> expr TIMES expr 
-- On EOF reduce production expr -> expr TIMES expr 
-- On END reduce production expr -> expr TIMES expr 
-- On ELSE reduce production expr -> expr TIMES expr 
-- On BCLOSE reduce production expr -> expr TIMES expr 
-- On ASSIGN reduce production expr -> expr TIMES expr 
** Conflict on NEQ LT LE GT GE EQ

State 16:
expr -> expr NEQ . expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On VAR shift to state 1
-- On LOC shift to state 7
-- On LABEL shift to state 10
-- On INT shift to state 11
-- On BOPEN shift to state 12
-- On expr shift to state 17

State 17:
expr -> expr . PLUS expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . MINUS expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . TIMES expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . EQ expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . NEQ expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr NEQ expr . [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . LT expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . LE expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . GT expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . GE expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . COMMA expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On TIMES shift to state 14
-- On PLUS shift to state 18
-- On NEQ shift to state 16
-- On MINUS shift to state 22
-- On LT shift to state 20
-- On LE shift to state 24
-- On GT shift to state 26
-- On GE shift to state 28
-- On EQ shift to state 30
-- On COMMA shift to state 32
-- On TSEP reduce production expr -> expr NEQ expr 
-- On TIMES reduce production expr -> expr NEQ expr 
-- On THEN reduce production expr -> expr NEQ expr 
-- On TCLOSE reduce production expr -> expr NEQ expr 
-- On SEMICOLON reduce production expr -> expr NEQ expr 
-- On PLUS reduce production expr -> expr NEQ expr 
-- On NEQ reduce production expr -> expr NEQ expr 
-- On MINUS reduce production expr -> expr NEQ expr 
-- On LT reduce production expr -> expr NEQ expr 
-- On LE reduce production expr -> expr NEQ expr 
-- On GT reduce production expr -> expr NEQ expr 
-- On GE reduce production expr -> expr NEQ expr 
-- On FI reduce production expr -> expr NEQ expr 
-- On EQ reduce production expr -> expr NEQ expr 
-- On EOF reduce production expr -> expr NEQ expr 
-- On END reduce production expr -> expr NEQ expr 
-- On ELSE reduce production expr -> expr NEQ expr 
-- On COMMA reduce production expr -> expr NEQ expr 
-- On BCLOSE reduce production expr -> expr NEQ expr 
-- On ASSIGN reduce production expr -> expr NEQ expr 
** Conflict on TIMES PLUS NEQ MINUS LT LE GT GE EQ COMMA

State 18:
expr -> expr PLUS . expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On VAR shift to state 1
-- On LOC shift to state 7
-- On LABEL shift to state 10
-- On INT shift to state 11
-- On BOPEN shift to state 12
-- On expr shift to state 19

State 19:
expr -> expr . PLUS expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr PLUS expr . [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . MINUS expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . TIMES expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . EQ expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . NEQ expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . LT expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . LE expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . GT expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . GE expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . COMMA expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On NEQ shift to state 16
-- On LT shift to state 20
-- On LE shift to state 24
-- On GT shift to state 26
-- On GE shift to state 28
-- On EQ shift to state 30
-- On COMMA shift to state 32
-- On TSEP reduce production expr -> expr PLUS expr 
-- On TIMES reduce production expr -> expr PLUS expr 
-- On THEN reduce production expr -> expr PLUS expr 
-- On TCLOSE reduce production expr -> expr PLUS expr 
-- On SEMICOLON reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On NEQ reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On LT reduce production expr -> expr PLUS expr 
-- On LE reduce production expr -> expr PLUS expr 
-- On GT reduce production expr -> expr PLUS expr 
-- On GE reduce production expr -> expr PLUS expr 
-- On FI reduce production expr -> expr PLUS expr 
-- On EQ reduce production expr -> expr PLUS expr 
-- On EOF reduce production expr -> expr PLUS expr 
-- On END reduce production expr -> expr PLUS expr 
-- On ELSE reduce production expr -> expr PLUS expr 
-- On BCLOSE reduce production expr -> expr PLUS expr 
-- On ASSIGN reduce production expr -> expr PLUS expr 
** Conflict on NEQ LT LE GT GE EQ

State 20:
expr -> expr LT . expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On VAR shift to state 1
-- On LOC shift to state 7
-- On LABEL shift to state 10
-- On INT shift to state 11
-- On BOPEN shift to state 12
-- On expr shift to state 21

State 21:
expr -> expr . PLUS expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . MINUS expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . TIMES expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . EQ expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . NEQ expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . LT expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr LT expr . [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . LE expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . GT expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . GE expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . COMMA expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On TIMES shift to state 14
-- On PLUS shift to state 18
-- On NEQ shift to state 16
-- On MINUS shift to state 22
-- On LT shift to state 20
-- On LE shift to state 24
-- On GT shift to state 26
-- On GE shift to state 28
-- On EQ shift to state 30
-- On COMMA shift to state 32
-- On TSEP reduce production expr -> expr LT expr 
-- On TIMES reduce production expr -> expr LT expr 
-- On THEN reduce production expr -> expr LT expr 
-- On TCLOSE reduce production expr -> expr LT expr 
-- On SEMICOLON reduce production expr -> expr LT expr 
-- On PLUS reduce production expr -> expr LT expr 
-- On NEQ reduce production expr -> expr LT expr 
-- On MINUS reduce production expr -> expr LT expr 
-- On LT reduce production expr -> expr LT expr 
-- On LE reduce production expr -> expr LT expr 
-- On GT reduce production expr -> expr LT expr 
-- On GE reduce production expr -> expr LT expr 
-- On FI reduce production expr -> expr LT expr 
-- On EQ reduce production expr -> expr LT expr 
-- On EOF reduce production expr -> expr LT expr 
-- On END reduce production expr -> expr LT expr 
-- On ELSE reduce production expr -> expr LT expr 
-- On COMMA reduce production expr -> expr LT expr 
-- On BCLOSE reduce production expr -> expr LT expr 
-- On ASSIGN reduce production expr -> expr LT expr 
** Conflict on TIMES PLUS NEQ MINUS LT LE GT GE EQ COMMA

State 22:
expr -> expr MINUS . expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On VAR shift to state 1
-- On LOC shift to state 7
-- On LABEL shift to state 10
-- On INT shift to state 11
-- On BOPEN shift to state 12
-- On expr shift to state 23

State 23:
expr -> expr . PLUS expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . MINUS expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr MINUS expr . [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . TIMES expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . EQ expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . NEQ expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . LT expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . LE expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . GT expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . GE expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
expr -> expr . COMMA expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On NEQ shift to state 16
-- On LT shift to state 20
-- On LE shift to state 24
-- On GT shift to state 26
-- On GE shift to state 28
-- On EQ shift to state 30
-- On COMMA shift to state 32
-- On TSEP reduce production expr -> expr MINUS expr 
-- On TIMES reduce production expr -> expr MINUS expr 
-- On THEN reduce production expr -> expr MINUS expr 
-- On TCLOSE reduce production expr -> expr MINUS expr 
-- On SEMICOLON reduce production expr -> expr MINUS expr 
-- On PLUS reduce production expr -> expr MINUS expr 
-- On NEQ reduce production expr -> expr MINUS expr 
-- On MINUS reduce production expr -> expr MINUS expr 
-- On LT reduce production expr -> expr MINUS expr 
-- On LE reduce production expr -> expr MINUS expr 
-- On GT reduce production expr -> expr MINUS expr 
-- On GE reduce production expr -> expr MINUS expr 
-- On FI reduce production expr -> expr MINUS expr 
-- On EQ reduce production expr -> expr MINUS expr 
-- On EOF reduce production expr -> expr MINUS expr 
-- On END reduce production expr -> expr MINUS expr 
-- On ELSE reduce production expr -> expr MINUS expr 
-- On BCLOSE reduce production expr -> expr MINUS expr 
-- On ASSIGN reduce production expr -> expr MINUS expr 
** Conflict on NEQ LT LE GT GE EQ

State 24:
expr -> expr LE . expr [ TSEP TIMES THEN TCLOSE SEMICOLON PLUS NEQ MINUS LT LE GT GE FI EQ EOF END ELSE COMMA BCLOSE ASSIGN ]
-- On VAR shift to state 1
-- On LOC shift to state 7
-- On LABEL shift to state 10
-- On INT shift to state 11
-- On BOPEN shift to state 12
-- On expr shift to state 25
